app/src/main/java/com/guobi/gfc/VoiceFun/grammar/Weather.g4
grammar Weather;

	s	:	u r j c j '天气' u
		|	c j r j '天气' u
		|	c j '天气' u ;
		
	u	:	a? ;
	c	:	a? ;
	j	:	'的'? ;  

	r	:	Z | Z n T | g T ;
	Z	:	'最近' | '未来' | '近来' | '将来' | '以后' | '往后' ;
	T	:	'天' | '日' ;
	n	:	'一' | '二' | '两' | '三' | '几' ;
	g	:	'今' | '明' | '后'  ;
	
	a	:	(A .*?) ;
	A	:	.+? ;
	
	
